syntax = "proto3";

package dataParse;

message User {
  string id = 1;
  string name = 2;
}