syntax = "proto3";

package example;

message User {
  int32 id = 1;
  string name = 2;
  repeated string emails = 3;
}

message Oppo {
    repeated int skillIds = 1;
    int32 maxHealth = 2;
}